button: fix scrollbar issue on a button (#149)

--- a/public/Buttons/shreya2703_5/style.css
+++ b/public/Buttons/shreya2703_5/style.css
@@ -1,3 +1,8 @@
+*{
+  padding: 0;
+  margin: 0;
+}
+
 body {
     display: flex;
     justify-content: center;
